# GrobidArticleExtractor

./: README.md  pyproject.toml
examples/: example.ipynb
src/GrobidArticleExtractor/: __init__.py  app.py  cli.py
src/PaperExtractor/: __init__.py  cli.py
src/PaperExtractor/utils/: __init__.py  http_client.py  logger.py  metadata_extractor.py  text_utils.py
src/tests/: test_GrobidArticleExtractor.py
